--- a/partials/_ux.html
+++ b/partials/_ux.html
@@ -3,6 +3,32 @@
 		<h1 class="heading">UX</h1>
 	</div>
 	<div class="row">
-	<!-- beginning of left column -->
+		<div class="col-xs-3 padding-zero">
+			<p class="info">TOURHOP</p>
+			<p class="summary">Tourh connects travelers and tour operators. Users experience tours with like minded people and enjoy a unique curated travel experience.</p>
+		</div>
+		<div class="col-xs-9 device-left">
+			<div class="row">
+				<img class="ux-img" src="../img/Tour Hop Calendar.jpg" alt="">
+				<img class="ux-img" src="../img/Tour Hop Day.jpg" alt="">
+				<img class="ux-img" src="../img/Tour Hop Tour Builder.jpg" alt="">
+			</div>
+		</div>
+	</div>
+	<div class="row row-divider">
+		<div class="col-xs-3 padding-zero">
+			<p class="info">NETFLIX THEATER</p>
+			<p class="summary">Netflix Theater is a User Experience project which integrates all of the learned practices and principles of information architecture, heuristics, user research, wireframing and rapid prototyping. The project is based on a web application that allows users to simultaneously interact with other users while watching Netflix programs.</p>
+		</div>
+		<div class="col-xs-9 device-left">
+			<div class="row">
+				<img class="ux-img" height="340px" src="../img/Netflix Theater Sketch.jpg" alt="">
+				<img class="ux-img" src="../img/Netflix Theater Add.png" alt="">
+			</div>
+			<div class="row">
+				<img class="ux-img" src="../img/Netflix Theater Lobby.png" alt="">
+				<img class="ux-img" src="../img/Netflix Theater Dash.png" alt="">
+			</div>
+		</div>
 	</div>
 </div>
